# PORR

./: .gitignore  CMakeLists.txt  CoevolutionEngineST.cpp  CoevolutionEngineST.h  CoevolutionEngineSTMPI.cpp  CoevolutionEngineSTMPI.h  GeneticAlgorithmEngine.cpp  GeneticAlgorithmEngine.h  Population.cpp  Population.h  README.md  Results.h  Widget.cpp  Widget.h  XYSeries.cpp  XYSeries.h  main.cpp  utils.h
